[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Renata Hlavova <hlavova.renata@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
